02:08:2025 Externalizing configurations and profile concepts